# manus-machina

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: README.md  advanced_crew_example.py  complete_example.py  quickstart.py  research_crew_example.py  research_workflow.py  sample_eval_set.json
infrastructure/database/: models.py
infrastructure/database/migrations/: env.py
manus_machina/: __init__.py  events.py
manus_machina/agents/: agent.py  crew.py  llm_integration.py  simple_agent.py  state.py  task.py
manus_machina/artifacts/: artifact.py
manus_machina/communication/: bus.py  protocols.py
manus_machina/evaluation/: framework.py
manus_machina/governance/: safety.py
manus_machina/guardrails/: engine.py  guards.py
manus_machina/llm/: litellm_client.py
manus_machina/memory/: vector_store.py
manus_machina/observability/: logger.py  metrics.py  tracer.py
manus_machina/orchestration/: saga.py  workflow.py
manus_machina/resilience/: circuit_breaker.py  retry.py
manus_machina/session/: session.py  session_service.py
manus_machina/state/: state.py
manus_machina/tools/: base.py
